<resources>
    <string name="app_name">Five Contacts</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="sign_in">Entrar</string>
    <string name="password">Senha</string>
    <string name="email_or_username">Nome do usuário</string>
    <string name="slogan">Agenda Virtual.</string>
    <string name="sign_up">Cadastrar-se</string>
    <string name="name">Nome</string>
    <string name="username">Usuário</string>
    <string name="email">E-mail</string>
    <string name="title_activity_contact_list">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="phone">Número</string>
    <string name="add_contact">Adicionar</string>
    <string name="logout">Sair</string>
</resources>