<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.activities.LoginActivity">



    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_layer_gradient" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <EditText
                android:id="@+id/edit_text_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="18dp"
                android:hint="@string/email_or_username"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:background="@drawable/bg_edittext_normal"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                app:layout_constraintBottom_toTopOf="@id/edit_text_password"/>

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="18dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:background="@drawable/bg_edittext_normal"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                app:layout_constraintBottom_toTopOf="@id/sw_keepConnected"/>

            <Switch
                android:id="@+id/sw_keepConnected"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="135dp"
                android:layout_marginBottom="18dp"
                android:gravity="right"
                android:showText="false"
                android:text="Manter Logado?"
                android:textColor="#Fff"
                android:textOff="Não"
                android:textOn="Sim"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/btn_sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/sign_in"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="18dp"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:background="@drawable/bg_button_normal"
                app:layout_constraintBottom_toTopOf="@id/txt_forgot_password"/>



            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/btn_sign_up"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/sign_up"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:textAllCaps="false"
                android:textColor="#Fb8c00"
                android:background="@drawable/bg_button_transparent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>